[package]
name = "wildescape"
version = "0.1.0"
authors = ["Jeremy He<yiliang.he@qq.com>"]
edition = "2018"
description = "Simple string matching  with questionmark, star wildcard operator and an escaped character."
keywords = ["globbing", "matching", "questionmark", "star", "string-matching", "escape"]
readme = "README.md"
license = "MIT"
categories = ["algorithms"]
repository = "https://github.com/ImJeremyHe/wildescape"

[dependencies]

[dev-dependencies]
ntest = "0.7.3"
criterion = "0.3.4"
regex = "1.4.3"
glob = "0.3.0"

[[bench]]
name = "patterns"
harness = false
